--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
+
     <title>LoopStudio</title>
   </head>
   <body>
-    Hello
+    <section id="hero">
+      <div class="container max-w-6xl mx-auto px-6 py-12 md:px-0">
+        <!-- Menu and Logo Container -->
+        <div class="flex items-center justify-between font-bold text-white">
+          <!-- Logo -->
+          <img src="images/logo.svg" alt="" srcset="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
