--- a/index.html
+++ b/index.html
@@ -15,13 +15,82 @@
   </head>
   <body>
     <section id="hero">
-      <div class="container max-w-6xl mx-auto px-6 py-12 md:px-0">
+      <div class="container max-w-6xl mx-auto px-6 py-12">
         <!-- Menu and Logo Container -->
-        <div class="flex items-center justify-between font-bold text-white">
+        <nav class="flex items-center justify-between font-bold text-white">
           <!-- Logo -->
           <img src="images/logo.svg" alt="" srcset="" />
+          <!-- Menu -->
+          <div class="hidden h-10 font-alata md:flex md:space-x-8">
+            <div class="group">
+              <a href="#">About</a>
+              <div
+                class="group-hover:border-b group-hover:border-blue-50 mx-2"
+              ></div>
+            </div>
+
+            <div class="group">
+              <a href="#">Careers</a>
+              <div
+                class="group-hover:border-b group-hover:border-blue-50 mx-2"
+              ></div>
+            </div>
+
+            <div class="group">
+              <a href="#">Events</a>
+              <div
+                class="group-hover:border-b group-hover:border-blue-50 mx-2"
+              ></div>
+            </div>
+
+            <div class="group">
+              <a href="#">Products</a>
+              <div
+                class="group-hover:border-b group-hover:border-blue-50 mx-2"
+              ></div>
+            </div>
+
+            <div class="group">
+              <a href="#">Support</a>
+              <div
+                class="group-hover:border-b group-hover:border-blue-50 mx-2"
+              ></div>
+            </div>
+          </div>
+          <!-- Hambuger Button -->
+        </nav>
+        <!-- Mobile Menu -->
+        <div
+          class="max-w-lg text-4xl my-32 p-4 font-sans text-white border-2 uppercase border-white font-normal md:text-6xl md:p-10 md:my-32"
+        >
+          Impressive Experiences That Deliver
         </div>
       </div>
     </section>
+
+    <section id="feature">
+      <div
+        class="relative container flex flex-col max-w-6xl mx-auto my-32 px-6 text-gray-900 md:flex-row md:p-0"
+      >
+        <img src="images/desktop/image-interactive.jpg" alt="" />
+        <div
+          class="md:absolute md:top-48 md:right-10 md:bg-white md:max-w-lg md:pl-20 md:pr-0 md:py-10 md:text-right"
+        >
+          <h2
+            class="my-8 uppercase font-medium text-4xl md:text-5xl text-center md:text-left"
+          >
+            The leader in interactive VR
+          </h2>
+          <p class="text-center md:text-left">
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="creation"></section>
   </body>
 </html>
