--- a/index.html
+++ b/index.html
@@ -272,6 +272,100 @@
       </div>
     </section>
 
-    <footer class="bg-black"></footer>
+    <footer class="bg-black">
+      <div class="container max-w-6xl py-10 mx-auto">
+        <!-- Flex-C -->
+        <div
+          class="flex flex-col items-center mb-8 space-y-6 md:flex-row md:justify-between md:space-y-0 md:items-center"
+        >
+          <!-- Menu & Logo C -->
+          <div
+            class="flex-flex-col items-center space-y-8 md:ml-3 md:space-y-4"
+          >
+            <!-- Logo -->
+            <div class="h-8">
+              <img src="images/logo.svg" alt="" class="w-44" />
+            </div>
+            <!-- Menu -->
+            <div
+              class="flex flex-col items-center space-y-4 font-bold text-white md:flex-row md:items-center md:space-x-6 md:space-y-0"
+            >
+              <!-- Item 1 -->
+              <div class="h-10 group">
+                <a href="#">About</a>
+                <div
+                  class="mx-2 group-hover:border-b-2 group-hover:border-blue-100"
+                ></div>
+              </div>
+              <!-- Item 2 -->
+              <div class="h-10 group">
+                <a href="#">Careers</a>
+                <div
+                  class="mx-2 group-hover:border-b-2 group-hover:border-blue-100"
+                ></div>
+              </div>
+              <!-- Item 3 -->
+              <div class="h-10 group">
+                <a href="#">Events</a>
+                <div
+                  class="mx-2 group-hover:border-b-2 group-hover:border-blue-100"
+                ></div>
+              </div>
+              <!-- Item 4 -->
+              <div class="h-10 group">
+                <a href="#">Products</a>
+                <div
+                  class="mx-2 group-hover:border-b-2 group-hover:border-blue-100"
+                ></div>
+              </div>
+              <!-- Item 5 -->
+              <div class="h-10 group">
+                <a href="#">Support</a>
+                <div
+                  class="mx-2 group-hover:border-b-2 group-hover:border-blue-100"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Social & CopyR C -->
+          <div class="flex flex-col space-y-4 text-gray-500 md:items-start">
+            <!-- Social -->
+            <div
+              class="flex items-center justify-center mx-auto space-x-4 md:justify-end md:mx-0"
+            >
+              <!-- Icon 1 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-facebook.svg" alt="" class="h-6" />
+                </a>
+              </div>
+              <!-- Icon 2 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-twitter.svg" alt="" class="h-6" />
+                </a>
+              </div>
+              <!-- Icon 3 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-pinterest.svg" alt="" class="h-6" />
+                </a>
+              </div>
+              <!-- Icon 4 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-instagram.svg" alt="" class="h-6" />
+                </a>
+              </div>
+            </div>
+            <!-- CopyR -->
+            <div class="font-bold">
+              &copy; 2024 Bobbystudios. All Rights Reserved
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
