--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>LoopStudio</title>
+    <title>Mini-LoopStudio</title>
   </head>
   <body>
     <section id="hero">
@@ -58,8 +59,30 @@
             </div>
           </div>
           <!-- Hambuger Button -->
+          <div class="md:hidden">
+            <button
+              id="menu-btn"
+              type="button"
+              class="z-40 block hamburger md:hidden focus:outline-none"
+            >
+              <span class="hamburger-top"></span
+              ><span class="hamburger-middle"></span
+              ><span class="hamburger-bottom"></span>
+            </button>
+          </div>
         </nav>
         <!-- Mobile Menu -->
+        <div
+          id="menu"
+          class="hidden absolute top-0 bottom-0 left-0 md:hidden flex-col w-full min-h-screen py-1 pt-40 pl-12 space-y-3 text-lg text-white uppercase bg-black"
+        >
+          <a href="#" class="hover:text-pink-500">About</a>
+          <a href="#" class="hover:text-pink-500">Careers</a>
+          <a href="#" class="hover:text-pink-500">Events</a>
+          <a href="#" class="hover:text-pink-500">Products</a>
+          <a href="#" class="hover:text-pink-500">Support</a>
+        </div>
+        <!-- Center Heading -->
         <div
           class="max-w-lg text-4xl my-32 p-4 font-sans text-white border-2 uppercase border-white font-normal md:text-6xl md:p-10 md:my-32"
         >
